# lattice-context

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPILOT_INTEGRATION_SUMMARY.md  DAILY_SUMMARY_2026-01-27.md  DOCKER.md  Dockerfile  EXECUTIVE_SUMMARY.md  FEATURES.md  GIT_REPOSITORY_STATUS.md  ITERATION_10_SUMMARY.md  ITERATION_11_SUMMARY.md  ITERATION_12_COMPLETE.md  ITERATION_12_SUMMARY.md  ITERATION_14_SUMMARY.md  ITERATION_18_SUMMARY.md  ITERATION_3_SUMMARY.md  ITERATION_4_SUMMARY.md  ITERATION_7_SUMMARY.md  LICENSE  MANIFEST.in  MONETIZATION_READY.md  QUICKSTART.md  RALPH_LOOP_COMPLETE_HISTORY.md  RALPH_LOOP_EXIT.md  RALPH_LOOP_STATUS.md  README.md  READY_TO_SHIP.md  RELEASE_CHECKLIST.md  SIMULATION_SUMMARY.md  UI_REQUIREMENTS.md  VALIDATION_CHECKLIST.md  create_test_dbt_project.sh  docker-compose.yml  pyproject.toml  ralph-loop.md  test_core_features.py  test_monetization.py  test_team_features.py  (+3 more)
.claude/: ralph-loop.local.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: CLAUDE_DESKTOP_TEST.md  COPILOT_INTEGRATION.md  PHASE_2_ROADMAP.md  SESSION_SUMMARY.md  SPRINT_1_COMPLETE.md  UNIVERSAL_API.md  requirement-prd.md
docs/iteration-summaries/: ITERATION_13_SUMMARY.md  ITERATION_15_SUMMARY.md  ITERATION_16_SUMMARY.md  ITERATION_17_SUMMARY.md  ITERATION_2_SUMMARY.md  ITERATION_5_SUMMARY.md  ITERATION_6_SUMMARY.md  ITERATION_8_SUMMARY.md
docs/research/: BEFORE_AFTER_COMPARISON.md  COMPREHENSIVE_SIMULATION.md  RESEARCH_BASED_ROADMAP.md
docs/status-reports/: CURRENT_STATUS.md  FEATURE_PROGRESS.md  LAUNCH_READY.md  (+7 more)
landing/: index.html
tests/: __init__.py  test_basic.py  test_cli.py
vscode-extension/: README.md  package.json
(+42 files in other folders)
